--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <footer>
         <h2>
-            copyrights for <a href="https://www.instagram.com/_jomana_mohammed_/">Jomana🐻</a>
+            copyright for <a href="https://www.instagram.com/_jomana_mohammed_/">Jomana🐻</a>
         </h2>
     </footer>
 </body>
