--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
       <div class="envelope"></div>
       <div class="card">
-        <h1 class="message">I was just thinking about that time when we meet first  </h1>
+        <h1 class="message">I was just thinking about that time when we first met  </h1>
         <div class="heart"></div>
       </div>
       <div class="cover"></div>
